Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33805

Native text rendering seems to ignore color

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.2.0 Alpha
    • Quick: SceneGraph
    • Windows 8 msvc2012 angle latest dev
    • 661e624121004dd73467300e467aacae6d8d2f66

    Description

      Native text rendering seems to ignore color

      See: QTCREATORBUG-10176 for details.

      Attachments

        For Gerrit Dashboard: QTBUG-33805
        # Subject Branch Project Status CR V

        Activity

          People

            sletta Gunnar Sletta
            thohartm Thomas Hartmann
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes